ingpass.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress-host-ssl-routing
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 
  rules:
  - host: demo.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: aadhttps
          servicePort: 443
